# deepresearch-playground

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
config/: config.example.yaml
docs/: STATUS.md
scripts/: SERVING.md  debug_studio.sh  demo_e2e.py  download_model_cloud.sh  golden_queries.yaml  preflight_deepseek.py  run_qdrant_local.sh  run_studio_dev.sh  serve_cloud.sh  serve_local.sh  smoke_e2e.sh  smoke_e2e_bundled.sh  studio_client_driver.py  studio_e2e.py  tunnel_sjtu.sh
src/deepresearch/agents/: __init__.py  _jsonparse.py  base.py  context.py  orchestrator.py  planner.py  reader.py  reflector.py  searcher.py  synthesizer.py
src/deepresearch/agents/langgraph/: __init__.py  callbacks.py  memory_hooks.py  reflection_node.py  role_map.py  router_chat_model.py  runtime.py  state.py  studio.py
src/deepresearch/agents/langgraph/upstream/: UPSTREAM_NOTE.md  __init__.py  deep_researcher.py  utils.py
src/deepresearch/agents/prompts/: __init__.py  planner.md  reader.md  reflector.md  searcher.md  synthesizer.md
src/deepresearch/api/: __init__.py  app.py  background.py  deps.py
src/deepresearch/api/routes/: memory.py  runs.py
src/deepresearch/broadcast/: README.md
src/deepresearch/cli/: __init__.py  db.py  eval.py  main.py  memory.py  run.py
src/deepresearch/config/: __init__.py  loader.py  schema.py
src/deepresearch/eval/: __init__.py  golden.py  reports.py  runner.py
src/deepresearch/memory/: __init__.py  profiles.py  reme_adapter.py  reme_flows.py  service.py  types.py  working_memory.py
src/deepresearch/models/: __init__.py  client.py  endpoints.py  retry.py  router.py
src/deepresearch/observability/: __init__.py  logging.py  trace.py
src/deepresearch/privacy/: README.md
src/deepresearch/scheduling/: README.md
src/deepresearch/schemas/: __init__.py  agents.py  memory.py  models.py  privacy.py  runs.py  search.py  trace.py
src/deepresearch/storage/: __init__.py  db.py  repository.py  tables.py
src/deepresearch/tiering/: README.md
src/deepresearch/tools/: __init__.py  registry.py
src/deepresearch/tools/fetch/: __init__.py  extract.py  fetcher.py
src/deepresearch/tools/search/: __init__.py  base.py  serpapi.py  tavily.py
tests/: conftest.py  test_callbacks.py  test_config.py  test_jsonparse.py  test_orchestrator_swap.py  test_reme_adapter.py  test_reme_live.py  test_router_chat_model.py  test_schemas.py  test_storage.py  test_studio_integration.py  test_working_memory.py
