[project]
name = "deepresearch-playground"
version = "0.1.0"
description = "Research playground for co-scheduling local + cloud LLMs on deep-research workflows with ReMe memory and privacy-bounded dispatch."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "setsuna113" }]

dependencies = [
  "fastapi>=0.121.3,<1",
  "uvicorn[standard]>=0.32,<1",
  "typer>=0.15,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "qdrant-client>=1.12,<2",
  "openai>=2.8.1,<3",
  "tiktoken>=0.8,<1",
  "sqlmodel>=0.0.22,<1",
  "alembic>=1.13,<2",
  "httpx>=0.27,<1",
  "tavily-python>=0.7,<1",
  "trafilatura>=2.0,<3",
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<7",
  "tenacity>=9,<11",
  "structlog>=24.4,<26",
  "rich>=13.9,<15",
  "pyyaml>=6,<7",
  "reme-ai>=0.3,<1",
  "flowllm>=0.2,<1",  # reme-ai 0.3.x imports from flowllm but doesn't declare it
  # LangChain 0.3.x line. open_deep_research @ 0dd30bd was pinned to
  # langgraph>=0.5.4 / langchain-openai>=0.3.28 (April 2026). LangChain
  # has since released 1.x; we stay on 0.3.x to match the vendored API.
  "langchain-core>=0.3.86,<0.4",
  "langchain>=0.3.30,<0.4",
  "langchain-openai>=0.3.35,<0.4",
  "langgraph>=0.6.11,<0.7",
  "langgraph-checkpoint>=2.0.5,<3",
  # open_deep_research vendored code imports langchain_mcp_adapters and mcp.
  # Pin these too so vendored utils.py imports resolve at runtime.
  # 0.2.x requires langchain-core>=1.0; we stay on 0.1.x to match the
  # vendored open_deep_research at 0dd30bd.
  "langchain-mcp-adapters>=0.1.6,<0.2",
  "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
  "mypy>=1.13,<2",
  "respx>=0.21,<1",
  "pytest-mock>=3.14,<4",
]

[project.scripts]
deepresearch = "deepresearch.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # let formatter handle line length

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
